load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

go_library(
    name = "go_default_library",
    srcs = [
        "hello.go",
    ],
    importpath = "github.com/victoriajyang/test-repo",
    deps = [
        "@org_golang_x_text//width:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hello_test.go",
    ],
    size = "small",
    embed = [
        ":go_default_library",
    ],
)
